k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chore-game
  namespace: chore-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chore-game
  template:
    metadata:
      labels:
        app: chore-game
    spec:
      containers:
        - name: chore-game
          image: ghcr.io/yad-othman/chore-game:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: chore-game
  namespace: chore-game
spec:
  selector:
    app: chore-game
  ports:
    - port: 80
      targetPort: 3000
